--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "prisma": "^5.19.1",
     "uuid": "^10.0.0"
@@ -23,6 +24,7 @@
     "@types/aws-sdk": "^0.0.42",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.12",
     "@types/uuid": "^10.0.0"
   }
